--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,39 @@ appstore_link                             :                                     
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+app_description                           : あなたとパートナーとの記念日を[ Anniversary tracker ]に記録しよう。
+
+
+主な特徴
+
+
+【 ホームスクリーン 】
+
+- 記念日の自動計算
+
+記念日の当日を１日目とカウントするか０日目とカウントするか選択可能です。
+
+- 写真
+
+カメラ又は写真フォルダからプロフィール写真を選択できます
+
+- 文字
+
+タイトルや名前のサイズ、色を自由に変更できます。
+
+- 背景画像
+
+好きなテーマを選択できます。
+
+- フォント
+
+好みのフォントに変更可能
+
+- ハート
+
+ホーム画面にある赤いハートを押して何が起きるか見てみて下さい。
+
+
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
