adds feature list

--- a/_config.yml
+++ b/_config.yml
@@ -13,39 +13,7 @@ appstore_link                             :                                     
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : あなたとパートナーとの記念日を[ Anniversary tracker ]に記録しよう。
-
-
-主な特徴
-
-
-【 ホームスクリーン 】
-
-- 記念日の自動計算
-
-記念日の当日を１日目とカウントするか０日目とカウントするか選択可能です。
-
-- 写真
-
-カメラ又は写真フォルダからプロフィール写真を選択できます
-
-- 文字
-
-タイトルや名前のサイズ、色を自由に変更できます。
-
-- 背景画像
-
-好きなテーマを選択できます。
-
-- フォント
-
-好みのフォントに変更可能
-
-- ハート
-
-ホーム画面にある赤いハートを押して何が起きるか見てみて下さい。
-
-
+app_description                           : Write a short tagline for your app.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -54,8 +22,8 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Cong Le                                
 your_link                                 :                      
-your_city                                 : Tokyo                                
-email_address                             : emil.baehr@gmail.com
+your_city                                 : London                                
+email_address                             : anniversarytrackerteamcong@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
 twitter_username                          : congle
@@ -68,41 +36,37 @@ mastodon_link                             :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
+  - title                                 : 記念日の自動計算
+    description                           : 記念日の当日を１日目とカウントするか０日目とカウントするか選択可能です。
     fontawesome_icon_name                 : magic
     
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
+  - title                                 : 写真
+    description                           : カメラ又は写真フォルダからプロフィール写真を選択できます。
     fontawesome_icon_name                 : mobile
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
+  - title                                 : 文字
+    description                           : タイトルや名前のサイズ、色を自由に変更できます。
     fontawesome_icon_name                 : play-circle
 
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
+  - title                                 : 背景画像
+    description                           : 好きなテーマを選択できます。
     fontawesome_icon_name                 : sync
 
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
+  - title                                 : フォント
+    description                           : 好みのフォントに変更可能
     fontawesome_icon_name                 : adjust
   
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
+  - title                                 : ハート
+    description                           : ホーム画面にある赤いハートを押して何が起きるか見てみて下さい。
     fontawesome_icon_name                 : star
 
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
+  - title                                 : 見やすい記念日
+    description                           : あなたのオリジナルの記念日を追加出来ます。 必要のなくなった記念日は左にスライドして消去で きます。
     fontawesome_icon_name                 : arrow-alt-circle-down
 
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
+  - title                                 : アラーム
+    description                           : 覚えておきたい記念日に個々にアラームを設定できます。当日から何日前にアラームが届くようにするか選択可能です。
     fontawesome_icon_name                 : link
-
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
 
   - title                                 : # New Feature Title
     description                           : # New Feature Description
