--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Cong Le                                
 your_link                                 :                      
-your_city                                 : London                                
+your_city                                 : Nottingham                                
 email_address                             : anniversarytrackerteamcong@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
