--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ enable_smart_app_banner                   : true                                
 
 
 # Information About Yourself
-your_name                                 : Cong & Alice                                
+your_name                                 : ディベロッパー：コン・リー                                
 your_link                                 : https://congl3.github.io/                      
 your_city                                 : Nottingham                                
 email_address                             : anniversarytrackerteamcong@gmail.com
