Fix URL paths for GitHub Pages with repository name and enable language switching

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 #page title
 page_title                                :                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
+# GitHub Pages configuration
+baseurl                                   : "/AnniversaryTrackerApp"                  # The subpath of your site, e.g. /blog
+url                                       : "https://congl3.github.io"                # The base hostname & protocol for your site
+
 # App Info
 ios_app_id                                : 1570714816                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 ios_app_country                           : jp                                        # Required outside USA. Enter 2 letter country code as in https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
