--- a/_data/en.yml
+++ b/_data/en.yml
@@ -6,10 +6,13 @@ nav_privacy: Privacy Policy
 nav_terms: Terms and Conditions
 nav_changelog: Changelog
 nav_presskit: Press Kit
+nav_contact: Contact Us
 footer_built_by: "Built by"
 footer_using_template: "using the"
 footer_template_name: "Automatic App Landing Page"
 footer_template_link_text: "template"
+contact_title: Contact Us
+contact_description: Need help? Contact our support team via email.
 
 features:
   - title: Automatic Anniversary Calculation
