Add direct contact redirect and improve Japanese localization

--- a/_data/jp.yml
+++ b/_data/jp.yml
@@ -5,12 +5,12 @@ your_name: ディベロッパー：コン・リー
 nav_privacy: 基本情報保護に関する基本方針
 nav_terms: 利用規約
 nav_changelog: 新機能
-nav_presskit: Press Kit
+nav_presskit: プレスキット
 nav_contact: お問い合わせ
-footer_built_by: "Built by"
-footer_using_template: "using the"
+footer_built_by: "製作"
+footer_using_template: "テンプレート:"
 footer_template_name: "Automatic App Landing Page"
-footer_template_link_text: "template"
+footer_template_link_text: "詳細"
 contact_title: お問い合わせ
 contact_description: サポートが必要な場合は、メールでお問い合わせください。
 
