--- a/_data/en.yml
+++ b/_data/en.yml
@@ -1,5 +1,5 @@
 app_description: Attractive and cute design
-your_name: "Developer: Cong Ly"
+your_name: "Developer: Cong Le"
 
 # Navigation & Footer Links
 nav_privacy: Privacy Policy
